[package]
name = "bsv-wallet-infra-cloudflare"
version = "0.1.0"
edition = "2021"
description = "Self-hosted BSV wallet storage server on Cloudflare Workers (Rust → WASM). JSON-RPC 2.0, BRC-31 authenticated, drop-in replacement for storage.babbage.systems."
license = "MIT"
repository = "https://github.com/Calhooon/bsv-wallet-infra-cloudflare"
keywords = ["bsv", "wallet", "cloudflare", "workers", "storage"]
categories = ["web-programming", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# BRC-31 auth + BRC-29 payment middleware (published from
# https://github.com/Calhooon/bsv-middleware-cloudflare). Aliased to
# `bsv-auth-cloudflare` so the source's `use bsv_auth_cloudflare::...`
# imports keep working — the package was renamed when published.
bsv-auth-cloudflare = { package = "bsv-middleware-cloudflare", version = "0.1.2" }
bsv-sdk = { package = "bsv-rs", version = "0.3", features = ["auth", "wallet", "transaction", "wasm"] }
worker = { version = "0.7", features = ["d1"] }
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hex = "0.4"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
