[package]
name = "bsv-wallet-infra-cloudflare"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bsv-auth-cloudflare = { path = "../rust-middleware/bsv-auth-cloudflare" }
bsv-sdk = { package = "bsv-rs", version = "0.3", features = ["auth", "wallet", "transaction", "wasm"] }
worker = { version = "0.7", features = ["d1"] }
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hex = "0.4"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# G5 tests: real-SQLite harness for the monitor's external-spend scan — runs
# the ACTUAL migrations + the ACTUAL candidate/guard SQL consts against an
# in-memory DB (D1 is SQLite, so semantics match). "bundled" compiles its own
# libsqlite3 (no system dependency). Dev-only: does not touch the wasm build.
rusqlite = { version = "0.32", features = ["bundled"] }
